force-app/main/default/objects/SVMXC__Doc_Template__c/fields/SVMXC__Detail_Object_Count__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Detail_Object_Count__c</fullName>
    <label>Detail Object Count</label>
    <summaryFilterItems>
        <field>SVMXC__Doc_Template_Details__c.SVMXC__Type__c</field>
        <operation>equals</operation>
        <value>Detail_Object</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SVMXC__Doc_Template_Details__c.SVMXC__Object_Name__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>SVMXC__Doc_Template_Details__c.SVMXC__Doc_Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>