force-app/main/default/objects/SVMXC__Doc_Template__c/fields/SVMXC__SM_Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>